Bug 94897 - FORMATTING: Diacritic letters displayed wrong with Cambria font when space follows
Summary: FORMATTING: Diacritic letters displayed wrong with Cambria font when space fo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-10-08 21:00 UTC by peterpan
Modified: 2016-10-25 19:17 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
partial printscreen (7.35 KB, image/png)
2015-10-08 21:00 UTC, peterpan
Details
test file (16.51 KB, application/vnd.oasis.opendocument.text)
2015-10-19 13:28 UTC, peterpan
Details
rif on test file with differnt fonts (21.68 KB, application/vnd.oasis.opendocument.text)
2015-10-19 17:06 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description peterpan 2015-10-08 21:00:43 UTC
Created attachment 119441 [details]
partial printscreen

On W10_x64 + LO 5.0.2.2

When Cambria font used and paragraph alignment selected as justified, the diacitic markers are consedered like separate letters and are moved out of context of a letter they belong to. This becames visible, when line is streched significantly. It happens only to diacritic marks above the letters followed by space.

does not happen with Times new roman or Liberation serif.
Comment 1 Buovjaga 2015-10-09 15:52:27 UTC
Reproduced.

Regression, as it doesn't happen with 4.3.0.1

Reproducing material, remember to insert spaces in Writer: http://www.czech.cz/cz/Home

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)
Comment 2 raal 2015-10-19 13:18:34 UTC
Please could you attach test file? I can not reproduce, thank you
Comment 3 peterpan 2015-10-19 13:28:37 UTC
Created attachment 119746 [details]
test file

Here is a test file
Comment 4 V Stuart Foote 2015-10-19 16:54:03 UTC
Well, the font metrics get even more interesting if you copy the paragraph from Cambria, and paste but change font to Liberation Serif. And again as Gentium Basic, and Libertine G.

So suitability of the "justification" seems to be dependent on font metric.

Still the Cambria metrics seem off in misplacing the diacritics--seems halfway between composition of Liberation Serif --compared to-- Gentium Basic or Libertine G.

Caldea and Carlito justify the same as Liberation Serif.
Comment 5 V Stuart Foote 2015-10-19 17:01:05 UTC
Since Cambria is a MS font, and the project deploys Caldea font with equivalent metrics--I suppose this could be closed Not Our Bug.

@perterpan -- do you get results you'd be able to use if you use Caldea rather than Cambria?
Comment 6 V Stuart Foote 2015-10-19 17:06:19 UTC
Created attachment 119766 [details]
rif on test file with differnt fonts
Comment 7 peterpan 2015-10-19 17:27:54 UTC
Oh, for sure we can use Caldea, that is not a problem. As it was said in Comment1 - it used to work fine. We used Cambria a lot in the past and noticed that only because we edited some old file. We use now mainly other fonts. Its up to You.
Comment 8 raal 2015-10-20 05:58:27 UTC
This seems to have begun at the below commit.
Adding Cc: to tml@collabora.com ; Could you possibly take a look at this one? Thanks
 7f0371ad242095657660bb4862bcdfa4a28b4e2c is the first bad commit
commit 7f0371ad242095657660bb4862bcdfa4a28b4e2c
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Aug 11 23:27:51 2015 -0700

    source 4667db065d34193d99bce82f7e8f3b20a03ecade

    source 4667db065d34193d99bce82f7e8f3b20a03ecade
	
	author	Tor Lillqvist <tml@collabora.com>	2015-08-12 05:18:50 (GMT)
committer	Tor Lillqvist <tml@collabora.com>	2015-08-12 06:14:20 (GMT)
commit 4667db065d34193d99bce82f7e8f3b20a03ecade (patch)

/bibisect-win32-5.1
$ git bisect log
# bad: [d07ec272f151832493f57ce3fde37a429eaf6014] source 233b9b0ec95069b5ce98aab942304459ca7344a8
# good: [c1efd324c6ad448ac9edb030dc9738b9e6899e4d] source ab465b90f6c6da5595393a0ba73f33a1e71a2b65
git bisect start 'd07ec272f151832493f57ce3fde37a429eaf6014' 'c1efd324c6ad448ac9edb030dc9738b9e6899e4d'
# good: [75b0ef076d724d10ed74681ba542db53f088b4ca] source 6dddd1aaf5dd3c54aaf87222712c9147466056f6
git bisect good 75b0ef076d724d10ed74681ba542db53f088b4ca
# bad: [017617b11c14b3ce32a5676bc4a239c45da3b05c] source 209951a8ae71ae38d57457a5a85005be8f46dcdf
git bisect bad 017617b11c14b3ce32a5676bc4a239c45da3b05c
# bad: [8ff0c6f10d7da9af7c3f7e11e30ebdb4ef99a9d6] source c1f456a4d212f6108220bb7c9712d584053c1e1e
git bisect bad 8ff0c6f10d7da9af7c3f7e11e30ebdb4ef99a9d6
# good: [28ee481e27118d6d561b41fdcb401b098c127a0a] source cd47929a6d161a99fb89bc91e776895ca2054b88
git bisect good 28ee481e27118d6d561b41fdcb401b098c127a0a
# good: [7ed47858c0d4e3984ef70c8b724b1230ea989e3e] source e5da350e4dd9b175c2f50cb392b23a805dac9a27
git bisect good 7ed47858c0d4e3984ef70c8b724b1230ea989e3e
# bad: [d5dac70529286a6fe0491652b8af71a975d3dc21] source 94cdcaa4d8db8f03ac9a84dac54357efff3eb123
git bisect bad d5dac70529286a6fe0491652b8af71a975d3dc21
# bad: [cc8ea2a510052475f17e6b97c6446dcf76a6a94b] source e008aebbcf366a64d5870ad3a5df39cac429b81c
git bisect bad cc8ea2a510052475f17e6b97c6446dcf76a6a94b
# good: [231be2c779b1b7f9f1887acc79b33777fff8c065] source cf58196691785d284fcffc653626fcf135c9ba69
git bisect good 231be2c779b1b7f9f1887acc79b33777fff8c065
# bad: [715ed18a4db53ac4d65598a82cb0ee8f059247ea] source 0409f83a5a4f9f86fa69a9431ce5aa07be427455
git bisect bad 715ed18a4db53ac4d65598a82cb0ee8f059247ea
# good: [b51adb834fc032eed77270683e8035d402f6932a] source f6595f0b3389ffeefa10035d915a884b02d26c0e
git bisect good b51adb834fc032eed77270683e8035d402f6932a
# good: [4c1f4b142e3895f02567094986b0b57ad7df0e50] source 1e4b29e1ad16e908f550eae035c3fae8e56831dd
git bisect good 4c1f4b142e3895f02567094986b0b57ad7df0e50
# bad: [7f0371ad242095657660bb4862bcdfa4a28b4e2c] source 4667db065d34193d99bce82f7e8f3b20a03ecade
git bisect bad 7f0371ad242095657660bb4862bcdfa4a28b4e2c
# good: [f8f8bdf24f7fc2f76810d36c4e1ce0e808c9509e] source 695cec87d73d56617e1cdc62621971ab35ac67eb
git bisect good f8f8bdf24f7fc2f76810d36c4e1ce0e808c9509e
# first bad commit: [7f0371ad242095657660bb4862bcdfa4a28b4e2c] source 4667db065d34193d99bce82f7e8f3b20a03ecade
Comment 9 Commit Notification 2015-10-20 21:21:28 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7323190456c2ed4ec9f092f8e69ba12ce41587cd

tdf#94897: Don't mess up spacing of combining diacritic glyphs

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 V Stuart Foote 2015-10-21 02:29:46 UTC
On Windows 10 Pro 64-bit en-US with
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 7323190456c2ed4ec9f092f8e69ba12ce41587cd
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-10-20_22:44:48
Locale: en-US (en_US)

This issue with justified Cambria is resolved.  

But, the Uniscribe/Graphite glitch of splitting glyphs from words with justified Gentium Basic, Linux Biolinum G and Linux Libertine G--as in attacment 119766 remains.
Comment 11 How can I remove my account? 2015-10-21 06:41:10 UTC
Please open a separate bug for each issue with a clearly different visual impact. Also, attach a very minimal sample document, and a screenshot of what is wrong. Add me to Cc.
Comment 12 V Stuart Foote 2015-10-21 13:31:56 UTC
(In reply to Tor Lillqvist from comment #11)
A new issue in bug 95222
Comment 13 Robinson Tryon (qubit) 2015-12-17 10:34:16 UTC Comment hidden (obsolete)
Comment 14 jhertel 2016-02-19 08:50:50 UTC
I installed 5.1.0.3 on Windows 10 a few days ago and the bug was still there. I experienced the bug with the Danish letter "å". 

I had to uninstall 5.1 solely due to this bug and went back to 4.4.7.2 which does not have that problem. I am still waiting for the problem to be solved. Any idea which version will solve it?
Comment 15 raal 2016-02-19 09:06:10 UTC
(In reply to jhertel from comment #14)
> I installed 5.1.0.3 on Windows 10 a few days ago and the bug was still
> there. I experienced the bug with the Danish letter "å". 
> 
> I had to uninstall 5.1 solely due to this bug and went back to 4.4.7.2 which
> does not have that problem. I am still waiting for the problem to be solved.
> Any idea which version will solve it?

See comment 10  and comment 11