tdf#94897: Don't mess up spacing of combining diacritic glyphs

At least for the Cambria font, instead of a precombined glyph,
Uniscribe ends up using a separate diacritic glyph for some (all?)
accented Latin characters. That caused weird layout errors in
justified lines when an accented character was followed by space: The
diacritic got separated from the base character.

Fix that specific case. Be careful not to mess with any other cases.

While debugging this I added lots of temporary debugging
printouts. Leave some helper functions for that behind, inside #if
0. Maybe we should start collecting such functions, including ones for
most common Win32 structs, in some include file in some common
location?

Change-Id: Ib0198411f820cb8ba8456786869185a43628628c